// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/IconButton IconButton Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-5bo23o-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-d00jsz-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1e2pjpj-IconButton"
        color=""
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-d00jsz-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1rb4vfk-IconButton"
        color=""
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-d00jsz-Icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-5bo23o-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-d00jsz-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-nse0ck-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-1atsk5c-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-cv8z9s-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-bbphqq-Icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
